# bad_apple_portfolio

./: .gitignore  COMMENTARY.md  LICENSE  README.md  REPRODUCTION.md  TECHNICAL.md  pyproject.toml
data/: bad_apple_narrative.parquet
data_pipeline/: 1_download_video.py  2_fetch_universe.py  3_corporate_actions.py  4a_batch_bbo.py  4b_batch_ohlcv.py  4c_ingest_to_s3.py  5_forward_fill.py  6_apply_splits.py  7_optimize_assignment.py  8_backtest.py  9_compute_stats.py  config.py
